So much cleanup. So very much. The entire com.offsetnull.bt.service package is clean.